<package format="3">
  <name>self_awareness_attachment</name>
  <version>0.0.1</version>
  <description>
    This package implements the attachment node for each functional ROS node, that provides topic
    and resource telemetry information. The telemetry includes Evaluation (for active nodes), and
    Estimation (for dormant nodes).
  </description>

  <maintainer email="yang1510@purdue.edu">Haoguang Yang</maintainer>
  <license>Apache 2.0</license>
  <author>Haoguang Yang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>refresh_ros_msgs</depend>
  <depend>dynmsg</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>pluginlib</depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>