<package format="3">
  <name>refresh_ros2</name>
  <version>0.0.1</version>
  <description>
    This package provides the infrastructure for run-time self-adaptation at the ROS node
    granularity. The self-adaptation act as a meta-control for the robotic system.
  </description>

  <maintainer email="yang1510@purdue.edu">Haoguang Yang</maintainer>
  <license>Apache 2.0</license>
  <author>Haoguang Yang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>refresh_ros_msgs</depend>
  <depend>pluginlib</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
